--- a/LPEnBici/WebContent/WEB-INF/facelets/templates/Layout.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/templates/Layout.xhtml
@@ -12,8 +12,9 @@ xmlns:ui= "http://java.sun.com/jsf/facelets">
 	<ui:insert name="titulo">
 		¡La Plata En Bici!
 	</ui:insert>
-
+	
 </title>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
 
 </h:head>
