--- a/LPEnBici/WebContent/WEB-INF/facelets/templates/defaultLayout.xhtml
+++ b/LPEnBici/WebContent/WEB-INF/facelets/templates/defaultLayout.xhtml
@@ -14,6 +14,7 @@ xmlns:ui= "http://java.sun.com/jsf/facelets">
 	</ui:insert>
 
 </title>
+	<link rel="shortcut icon" type="image/png" href="img/favicon.ico" />
 
 </h:head>
 <h:body>
